// Copyright 2021 Security Scorecard Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ossf.scorecard.cron.data;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ossf/scorecard/v2/cron/data";

message ScorecardBatchRequest {
  repeated string repos = 1;
  optional int32 shard_num = 2;
  optional google.protobuf.Timestamp job_time = 3;
}
